--- a/src/Hackathon_CV_Portal.Web/Views/Account/Login.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Account/Login.cshtml
@@ -7,81 +7,61 @@
 
 @using (Html.BeginForm(new { ReturnAcction = ViewBag.ReturnAcction, ReturnController = ViewBag.ReturnController,  RouteId = ViewBag.routeId }))
 {
-<div class="row">
+@*<div class="row">
     <div class="col-md-6 offset-lg-3 offset-md-2">
         <div class="row">
-            <div class="col-md-8 offset-lg-2 offset-md-1">
-                <section>
-                    <form asp-action="LogIn" method="post">
-                        <h4>ავტორიზაცია</h4>
-                        <hr />
-                        <div class="form-group">
-                            <label asp-for="UserName"></label>
-                            <input asp-for="UserName" class="form-control" />
-                            <span asp-validation-for="UserName" class="text-danger"></span>
+            <div class="col-md-8 offset-lg-2 offset-md-1">*@
+<section class="vh-100 gradient-custom">
+    <div class="container py-5 h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+          <div class="card bg-dark text-white" style="border-radius: 1rem;">
+            <div class="card-body p-5 text-center">
+  
+              <div class="mb-md-5 mt-md-4 pb-5">
+  
+                <form asp-action="LogIn" method="post">
+                    <div class="form-group form-white mb-4">
+                        <label asp-for="UserName"></label>
+                        <input asp-for="UserName" class="form-control" />
+                        <span asp-validation-for="UserName" class="text-danger"></span>
+                    </div>
+                    <div class="form-group form-white mb-4">
+                        <label asp-for="Password"></label>
+                        <input asp-for="Password" class="form-control" />
+                        <span asp-validation-for="Password" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <div class="checkbox">
+                            <label asp-for="RememberMe">
+                                <input asp-for="RememberMe" />
+                                @Html.DisplayNameFor(m => m.RememberMe)
+                            </label>
                         </div>
-                        <div class="form-group">
-                            <label asp-for="Password"></label>
-                            <input asp-for="Password" class="form-control" />
-                            <span asp-validation-for="Password" class="text-danger"></span>
-                        </div>
-                        <div class="form-group">
-                            <div class="checkbox">
-                                <label asp-for="RememberMe">
-                                    <input asp-for="RememberMe" />
-                                    @Html.DisplayNameFor(m => m.RememberMe)
-                                </label>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <input class="btn btn-outline-success float-right" type="submit" value="Log in" />
-                        </div>
-                        @*                <div class="form-group">
-                            <p>
-                            <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-                            </p>
-                            <p>
-                            <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-                            </p>
-                            </div>*@
-                    </form>
-                </section>
+                    </div>
+                    <div class="form-group">
+                        <input class="btn btn-outline-success float-right" type="submit" value="ავტორიზაცია" />
+                    </div>
+                    <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">დაგავიწყდათ პაროლი?</a></p>
+                </form>  
+                <div class="d-flex justify-content-center text-center mt-4 pt-1">
+                  <a href="#!" class="text-white"><i class="fab fa-facebook-f fa-lg"></i></a>
+                  <a href="#!" class="text-white"><i class="fab fa-twitter fa-lg mx-4 px-2"></i></a>
+                  <a href="#!" class="text-white"><i class="fab fa-google fa-lg"></i></a>
+                </div>
+              </div>
+              <div>
+                <p class="mb-0">არ გაქვთ ანგარიში? <a asp-controller="Account" asp-action="Register" class="text-white-50 fw-bold">რეგისტრაცია</a>
+                </p>
+              </div>
+  
             </div>
-            @*<div class="col-md-6 col-md-offset-2">
-                <section>
-                <h4>Use another service to log in.</h4>
-                <hr />
-                @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                <div>
-                <p>
-                There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
-                for details on setting up this ASP.NET application to support logging in via external services.
-                </p>
-                </div>
-                }
-                else
-                {
-                <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                <div>
-                <p>
-                @foreach (var provider in Model.ExternalLogins)
-                {
-                <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                }
-                </p>
-                </div>
-                </form>
-                }
-                }
-                </section>
-                </div>*@
+          </div>
         </div>
+      </div>
     </div>
-</div>
+  </section>
 }
-
 @section Scripts {
 <partial name="_ValidationScriptsPartial" />
 }
