--- a/src/Hackathon_CV_Portal.Web/Views/Shared/_Layout.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Shared/_Layout.cshtml
@@ -37,36 +37,34 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">re:hire</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+        <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
+            <a asp-controller="Home" asp-action="Index"class="navbar-brand d-flex align-items-center text-center py-0 px-4 px-lg-5">
+                <h1 class="m-0 text-primary">re:hire</h1>
+            </a>
+            <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <div class="navbar-nav ms-auto p-4 p-lg-0">
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">მთავარი</a>
+                    
+                    <div class="nav-item dropdown">
+                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">ვაკანსიები</a>
+                        <div class="dropdown-menu rounded-0 m-0">
+                                <a  asp-area="" asp-controller="Vacancy" asp-action="Index" class="dropdown-item">ვაკანსიები</a>
+                                <a  asp-area="" asp-controller="Category" asp-action="Index" class="dropdown-item">კატეგორიები</a>
+                            </div>
+                    </div>
+                    @if(User.Identity.IsAuthenticated && User.IsInRole("User"))
+                    {
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="CurriculumVitae" asp-action="Index">ჩემი CV</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Vacancy" asp-action="Index">ვაკანსიები</a>
-                        </li>
-
-                        @if(User.Identity.IsAuthenticated && User.IsInRole("User"))
-                        {
-                              <li class="nav-item">
-                                   <a class="nav-link text-dark" asp-area="" asp-controller="CurriculumVitae" asp-action="Index">ჩემი CV</a>
-                               </li>
-                        }
-                    </ul>
+                    }
+                    <a class="nav-link text-dark" asp-area="" asp-controller="About" asp-action="Index">ჩვენს შესახებ</a>
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Contact" asp-action="Index">კონტაქტი</a>
                 </div>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <partial name="_LoginPartial" />
-                </div>
+                <partial name="_LoginPartial" />
             </div>
         </nav>
     </header>
