--- a/src/Hackathon_CV_Portal.Web/Views/Shared/_LoginPartial.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Shared/_LoginPartial.cshtml
@@ -19,10 +19,10 @@
     else
     {
         <li class="nav-item">
-            <a class="nav-link text-dark" id="register" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
+            <a class="nav-link text-dark" id="register" asp-area="" asp-controller="Account" asp-action="Register">რეგისტრაცია</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark" id="login" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
+            <a class="nav-link text-dark" id="login" asp-area="" asp-controller="Account" asp-action="Login">ავტორიზაცია</a>
         </li>
     }
 </ul>
