--- a/src/Hackathon_CV_Portal.Web/Views/Vacancy/Index.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Vacancy/Index.cshtml
@@ -6,35 +6,36 @@
 @inject SignInManager<ApplicationUser> SignInManager
 @model VacansyVM
 
-
-@using (Html.BeginForm("Index", "Vacancy", FormMethod.Get)){
-    <div class="container-xxl bg-white p-0" bgcolor="#800000">
-        <div class="container-fluid bg-primary mb-5 wow fadeIn" data-wow-delay="0.1s" style="padding: 35px;">
-            <div class="container">
-                <div class="row g-2">
-                    <div class="col-md-10">
-                        <div class="row g-2">
-                            <div class="col-md-4">
-                                <p>
-                                    კატეგორია: @Html.TextBox("searchCategory", ViewBag.CurrentFilter as string, "კატეგორია")
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                            <input type="submit" class="form-control border-0" value="ძებნა" />
-                    </div>
-                </div>
-            </div>
-        </div>
-     </div>
-}
     <div class="container-xxl py-5">
     <div class="container">
-        <h1 class="text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">ვაკანსიები</h1>
+        @*<h1 class="text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">ვაკანსიები</h1>*@
+        <h1 class="display-3  mb-3 animated slideInDown">ვაკანსიები</h1>
 
         <div class="tab-class text-center wow fadeInUp" data-wow-delay="0.3s">
-            <ul class="nav nav-pills d-inline-flex justify-content-center border-bottom mb-5">
+            
+                @using (Html.BeginForm("Index", "Vacancy", FormMethod.Get)){
+                    <div class="container-xxl bg-white p-0" bgcolor="#800000">
+                        <div class="container-fluid bg-primary mb-5 wow fadeIn" data-wow-delay="0.1s" style="padding: 35px;">
+                            <div class="container">
+                                <div class="row g-2">
+                                    <div class="col-md-10">
+                                        <div class="row g-2">
+                                            <div class="col-md-4">
+                                                <p>
+                                                    კატეგორია: @Html.TextBox("searchCategory", ViewBag.CurrentFilter as string, "კატეგორია")
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-2">
+                                            <input type="submit" class="form-control border-0" value="ძებნა" />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                     </div>
+                }
+                <ul class="nav nav-pills d-inline-flex justify-content-center border-bottom mb-5">
             <li class="nav-item">
                 <a class="d-flex align-items-center text-start mx-3 pb-3" data-bs-toggle="pill" href="#tab-2">
                     <h6 class="mt-n1 mb-0"><a class="page-link" href="?vacancyType=FullTime">Full Time</a></h6>
