--- a/src/Hackathon_CV_Portal.Web/Views/Vacancy/Add.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Vacancy/Add.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "ვაკანსიის დამატება";
 }
 
-<div class="row">
+@*<div class="row">
     <div class="col-md-6 offset-lg-3 offset-md-2">
         <div class="row">
             <div class="col-md-8 offset-lg-2 offset-md-1">
@@ -49,4 +49,4 @@
             </div>
         </div>
     </div>
-</div>
+</div>*@
