--- a/src/Hackathon_CV_Portal.Web/Views/Account/Login.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Account/Login.cshtml
@@ -21,6 +21,7 @@
               <div class="mb-md-5 mt-md-4 pb-5">
   
                 <form asp-action="LogIn" method="post">
+                    <div asp-validation-summary="All" class="text-danger"></div>
                     <div class="form-group form-white mb-4">
                         <label asp-for="UserName"></label>
                         <input asp-for="UserName" class="form-control" />
