--- a/src/Hackathon_CV_Portal.Web/Views/Account/Register.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Account/Register.cshtml
@@ -15,7 +15,7 @@
               <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
                 <form class="mx-1 mx-md-4" asp-action="Register" method="post">
-
+                    <div asp-validation-summary="All" class="text-danger"></div>
                   <div class="d-flex flex-row align-items-center mb-4">
                     <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
