--- a/src/Hackathon_CV_Portal.Web/Views/Shared/_Layout.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Shared/_Layout.cshtml
@@ -1,21 +1,22 @@
-﻿<!DOCTYPE html>
+﻿@using System.Security.Claims
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>re:hire</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css"/>
+    <link rel="stylesheet" href="~/css/site.css" />
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
-        <!-- Google Web Fonts -->
+    <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Inter:wght@700;800&display=swap" rel="stylesheet">
-    
+
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-    
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
 
     <!-- Libraries Stylesheet -->
@@ -38,7 +39,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
-            <a asp-controller="Home" asp-action="Index"class="navbar-brand d-flex align-items-center text-center py-0 px-4 px-lg-5">
+            <a asp-controller="Home" asp-action="Index" class="navbar-brand d-flex align-items-center text-center py-0 px-4 px-lg-5">
                 <h1 class="m-0 text-primary">re:hire</h1>
             </a>
             <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -47,32 +48,41 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto p-4 p-lg-0">
                     <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">მთავარი</a>
-                    
+
                     <div class="nav-item dropdown">
-                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">ვაკანსიები</a>
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">ვაკანსიები</a>
                         <div class="dropdown-menu rounded-0 m-0">
-                                <a  asp-area="" asp-controller="Vacancy" asp-action="Index" class="dropdown-item">ვაკანსიები</a>
-                                <a  asp-area="" asp-controller="Category" asp-action="Index" class="dropdown-item">კატეგორიები</a>
-                            </div>
+                            <a asp-area="" asp-controller="Vacancy" asp-action="Index" class="dropdown-item">ვაკანსიები</a>
+                            <a asp-area="" asp-controller="Category" asp-action="Index" class="dropdown-item">კატეგორიები</a>
+                        </div>
                     </div>
-                        @if(User.Identity.IsAuthenticated && User.IsInRole("User"))
-                        {
-                              <li class="nav-item">
-                                   <a class="nav-link text-dark" asp-area="" asp-controller="CurriculumVitae" asp-action="Index">ჩემი CV</a>
-                               </li>
-                               <li class="nav-item">
-                                   <a class="nav-link text-dark" asp-area="" asp-controller="CurriculumVitae" asp-action="Update">CV-ს შევსება</a>
-                               </li>
-                               <li class="nav-item">
-                                   <a class="nav-link text-dark" asp-area="" asp-controller="CurriculumVitae" asp-action="Skill">შენი უნარები</a>
-                               </li>
-                               <li class="nav-item">
-                                   <a class="nav-link text-dark" asp-area="" asp-controller="CurriculumVitae" asp-action="Education">შენი განათლება</a>
-                               </li>
-                               <li class="nav-item">
-                                   <a class="nav-link text-dark" asp-area="" asp-controller="CurriculumVitae" asp-action="WorkingExperience">შენი სამუშაო გამოცდილება</a>
-                               </li>
-                        }
+                    @if (User.Identity.IsAuthenticated && User.IsInRole("User"))
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="CurriculumVitae" asp-action="Index">ჩემი CV</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="CurriculumVitae" asp-action="Update">CV-ს შევსება</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="CurriculumVitae" asp-action="Skill">შენი უნარები</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="CurriculumVitae" asp-action="Education">შენი განათლება</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="CurriculumVitae" asp-action="WorkingExperience">შენი სამუშაო გამოცდილება</a>
+                        </li>
+                    }
+                    @if (User.Identity.IsAuthenticated && User.IsInRole("Company"))
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Vacancy" asp-action="Add">ვაკანსიის დამატება</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Vacancy" asp-action="Index" asp-route-companyId="@int.Parse(User.FindFirstValue(ClaimTypes.NameIdentifier))">ჩემი ვაკანისები</a>    
+                        </li>
+                    }
                     <a class="nav-link text-dark" asp-area="" asp-controller="About" asp-action="Index">ჩვენს შესახებ</a>
                     <a class="nav-link text-dark" asp-area="" asp-controller="Contact" asp-action="Index">კონტაქტი</a>
                 </div>
@@ -86,12 +96,12 @@
         </main>
     </div>
 
-@*    <footer class="border-top footer text-muted">
+    @*    <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - re:hire - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        &copy; 2022 - re:hire - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
-    </footer>*@
-    
+        </footer>*@
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
