--- a/src/Hackathon_CV_Portal.Web/Views/CurriculumVitae/AddEducation.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/CurriculumVitae/AddEducation.cshtml
@@ -7,7 +7,7 @@
 <div class="row text">
     <div class="col-md-8 offset-2">
         <p>
-            <h1 class="text-center">დაამატე განათელება</h1>
+            <h1 class="text-center">დაამატე განათლება</h1>
         </p>
         <div class="row">
             <div class="col-md-8 offset-2">
